--- a/architecture.html
+++ b/architecture.html
@@ -52,16 +52,17 @@
     </div>
     <!-- industry tabs -->
     <div class="container industry_tabs">
-        <p class="industry_tab industryTabActive" data-name="project1">sub category 1</p>
-        <p class="industry_tab" data-name="project2">sub category 2</p>
+        <p class="industry_tab industryTabActive" data-name="project1">high rise development</p>
+        <p class="industry_tab" data-name="project2">individual homes</p>
+        <p class="industry_tab" data-name="project3">others</p>
     </div>
-    <!-- project 1 cards -->
+    <!-- project 1 cards high rise development -->
     <div class="container project_cards_wrap project_wrap_active" data-name="project1" >
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/landscape_project_v3.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/1_dindoshi.jpg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -73,7 +74,55 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/landscape_project_v3.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/2_hariniwas.jpg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/high_rise/3_66_downtown.jpg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/high_rise/4_shivprabha.jpg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/high_rise/5_triveni.jpg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/high_rise/6_tep_village.jpg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -88,7 +137,130 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/landscape_project_v3.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/individual_houses/1_house_on_levels.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/2_shahapur_villa.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/3_sunny_tathele.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/4_house_on_the_river_edge.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/5_house_in_parbhani.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- project 3 cards -->
+    <div class="container project_cards_wrap" data-name="project3">
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/others/1_wada_factory.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/others/2_maxtech_industries.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/others/3_times_of_india.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/others/4_jubilant_foodworks.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/others/5_aai.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/others/6_sun_city.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
