--- a/landscape.html
+++ b/landscape.html
@@ -45,7 +45,7 @@
         <p class="project_head category_project_head">Projects</p>
     </div>
     <!-- project cards -->
-    <div class="container project_cards_wrap">
+    <div class="container project_cards_wrap project_wrap_active">
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
@@ -62,7 +62,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/landscape_project_v3.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/landscape/landscape_project.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
