--- a/index.html
+++ b/index.html
@@ -372,6 +372,10 @@
                 <div class="client">
                     <img src="https://dummyimage.com/190x70/000/fff" alt="">
                 </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
             </div>
         </div>
     </section>
