hero, industries, key projects, responsive

--- a/index.html
+++ b/index.html
@@ -58,49 +58,49 @@
         <div class="container">
             <div class="industry_card_wrap">
                 <!-- industry card -->
-                <div class="industry_card">
+                <a href="architecture.html" class="industry_card">
                     <img src="assets/industries_cover/architecture.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">architecture</p>
-                    <a href="architecture.html" class="industry_cta">
+                    <span class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
                         </span>
-                    </a>
-                </div>
+                    </span>
+                </a>
                 <!-- industry card -->
-                <div class="industry_card">
+                <a href="landscape.html" class="industry_card">
                     <img src="assets/industries_cover/landscape.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">landscape</p>
-                    <a href="landscape.html" class="industry_cta">
+                    <span class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
                         </span>
-                    </a>
-                </div>
+                    </span>
+                </a>
                 <!-- industry card -->
-                <div class="industry_card">
+                <a class="industry_card">
                     <img src="assets/industries_cover/interior.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">interiors</p>
-                    <a class="industry_cta">
+                    <span class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
                         </span>
-                    </a>
-                </div>
+                    </span>
+                </a>
                 <!-- industry card -->
-                <div class="industry_card">
+                <a class="industry_card">
                     <img src="assets/industries_cover/hospitality.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
-                    <p class="industry_name">hospitality/healthcare planning</p>
-                    <a class="industry_cta">
+                    <p class="industry_name hospital_healthcare">hospitality & healthcare planning</p>
+                    <span class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
                         </span>
-                    </a>
-                </div>
+                    </span>
+                </a>
             </div>
         </div>
     </section>
