category heads changes

--- a/architecture.html
+++ b/architecture.html
@@ -44,12 +44,12 @@
     </header>
     <!-- left name -->
     <div class="category_name_wrap">
-        <p class="category_name category_project_head">Architecture</p>
+        <p class="category_name category_project_head">Architecture Projects</p>
     </div>
     <!-- right name -->
-    <div class="project_head_wrap">
+    <!-- <div class="project_head_wrap">
         <p class="project_head category_project_head">Projects</p>
-    </div>
+    </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
         <p class="industry_tab industryTabActive" data-name="project1">high rise development</p>
