key proj space, sub cat design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
 
     <!-- css -->
     <link rel="stylesheet" href="main.css">
@@ -113,9 +113,9 @@
                 <div class="key_project">
 
                     <div class="key_project_right">
-                        <p class="key_project_name">RG - 36</p>
+                        <p class="key_project_name">RG-36</p>
                         <p class="key_project_time">Suraksha Smart City, Completed</p>
-                        <p class="key_project_desc">A unique recreational reservation ground nestled near an estuary. At RG - 36, we take pride in our commitment to preserving the environment.</p>
+                        <p class="key_project_desc">A unique recreational reservation ground nestled near an estuary. At RG-36, we take pride in our commitment to preserving the environment.</p>
 
                         <div class="key_points v2_key_points">
                             <!-- key_point -->
