--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </span>
                 </a>
                 <!-- industry card -->
-                <a class="industry_card">
+                <a href="interiors.html" class="industry_card">
                     <img src="assets/industries_cover/interior.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">interiors</p>
@@ -397,7 +397,7 @@
     <div class="sticky_industries">
         <a href="architecture.html" class="sticky_industry">Architecture</a>
         <a href="landscape.html" class="sticky_industry">Landscape</a>
-        <a class="sticky_industry">Interior</a>
+        <a href="interiors.html" class="sticky_industry">Interiors</a>
         <a class="sticky_industry">Hospitality / Healthcare Planning</a>
     </div>
 
