--- a/interiors.html
+++ b/interiors.html
@@ -17,7 +17,7 @@
 
         <!-- css -->
         <link rel="stylesheet" href="main.css">
-        <title>Architecture - EN+AD</title>
+        <title>Interiors - EN+AD</title>
     </head>
 <body class="category_page">
 
@@ -44,7 +44,7 @@
     </header>
     <!-- left name -->
     <div class="category_name_wrap">
-        <p class="category_name category_project_head">Architecture Projects</p>
+        <p class="category_name category_project_head">Interiors Projects</p>
     </div>
     <!-- right name -->
     <!-- <div class="project_head_wrap">
@@ -52,9 +52,9 @@
     </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
-        <p class="industry_tab industryTabActive" data-name="project1">high rise development</p>
-        <p class="industry_tab" data-name="project2">individual homes</p>
-        <p class="industry_tab" data-name="project3">others</p>
+        <p class="industry_tab industryTabActive" data-name="project1">residential</p>
+        <p class="industry_tab" data-name="project2">commercial</p>
+        <p class="industry_tab interiors_high_enad" data-name="project3">High ENAD Residential</p>
     </div>
     <!-- project 1 cards -->
     <div class="container project_cards_wrap project_wrap_active" data-name="project1" >
@@ -62,7 +62,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/1_dindoshi.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/residential/1_1bhk_pune.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -74,7 +74,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/2_hariniwas.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/residential/2_1bhk_goregaon.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -86,7 +86,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/3_66_downtown.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/residential/3_2bhk_kandivali.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -98,7 +98,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/4_shivprabha.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/residential/4_3bhk_thane.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -110,7 +110,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/5_triveni.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/residential/5_building_lobby.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -122,7 +122,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/6_tep_village.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/residential/6_ekatma_lobby.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -137,7 +137,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/1_house_on_levels.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/commercial/1_ca_office.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -149,7 +149,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/2_shahapur_villa.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/commercial/2_vks.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -161,7 +161,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/3_sunny_tathele.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/commercial/3_clothing_store.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -173,7 +173,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/4_house_on_the_river_edge.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/commercial/4_school_lobby.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -185,7 +185,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/5_house_in_parbhani.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/commercial/5_office_interiors.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -200,7 +200,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/1_wada_factory.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/1_bunglow_at_goa.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -212,7 +212,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/2_maxtech_industries.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/2_bunglow_at_alibaug.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -224,7 +224,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/3_times_of_india.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/3_bunglow_at_wada.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -236,31 +236,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/4_jubilant_foodworks.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/5_aai.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/6_sun_city.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_wada.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
