key projects location, inte tabs, hospi resp head

--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -44,7 +44,7 @@
     </header>
     <!-- left name -->
     <div class="category_name_wrap">
-        <p class="category_name category_project_head">Hospitality & Healthcare Projects</p>
+        <p class="category_name category_project_head hospitality_head">Hospitality & Healthcare Projects</p>
     </div>
     <!-- right name -->
     <!-- <div class="project_head_wrap">
