--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
                     <div class="key_project_right">
                         <p class="key_project_name">Vivek Sewa Kendra</p>
-                        <p class="key_project_time">Dadar (W), Completed</p>
+                        <p class="key_project_time">Bhalivali, Completed</p>
                         <p class="key_project_desc">A dedicated NGO, focused on advancing skill development initiatives for tribal communities near MMR.</p>
 
                         <div class="key_points v2_key_points">
