--- a/interiors.html
+++ b/interiors.html
@@ -52,9 +52,9 @@
     </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
-        <p class="industry_tab industryTabActive" data-name="project1">residential</p>
-        <p class="industry_tab" data-name="project2">commercial</p>
-        <p class="industry_tab interiors_high_enad" data-name="project3">High ENAD Residential</p>
+        <p class="industry_tab interiors_high_enad industryTabActive" data-name="project1"> High-End Residential</p>
+        <p class="industry_tab" data-name="project2"> residential</p>
+        <p class="industry_tab" data-name="project3">commercial</p>
     </div>
     <!-- project 1 cards -->
     <div class="container project_cards_wrap project_wrap_active" data-name="project1" >
