--- a/architecture.html
+++ b/architecture.html
@@ -52,17 +52,17 @@
     </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
-        <p class="industry_tab industryTabActive" data-name="project1">high rise development</p>
-        <p class="industry_tab" data-name="project2">individual homes</p>
+        <p class="industry_tab" data-name="project1">high rise development</p>
+        <p class="industry_tab industryTabActive" data-name="project2">individual houses</p>
         <p class="industry_tab" data-name="project3">others</p>
     </div>
     <!-- project 1 cards -->
-    <div class="container project_cards_wrap project_wrap_active" data-name="project1" >
+    <div class="container project_cards_wrap" data-name="project1" >
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/1_dindoshi.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/6_tep_village.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -74,7 +74,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/2_hariniwas.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/3_66_downtown.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -86,7 +86,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/3_66_downtown.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/4_shivprabha.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -98,7 +98,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/4_shivprabha.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/5_triveni.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -110,7 +110,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/5_triveni.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/2_hariniwas.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -122,7 +122,19 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/high_rise/6_tep_village.jpg" class="project_image" alt="">
+                    <img src="assets/industries_internal/architecture/high_rise/7_sai_laxmi.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/high_rise/8_babhai_naka.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -132,36 +144,12 @@
         </div>
     </div>
     <!-- project 2 cards -->
-    <div class="container project_cards_wrap" data-name="project2">
+    <div class="container project_cards_wrap project_wrap_active" data-name="project2">
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
                     <img src="assets/industries_internal/architecture/individual_houses/1_house_on_levels.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/2_shahapur_villa.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/individual_houses/3_sunny_tathele.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -185,7 +173,79 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/3_sunny_tathele.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/2_shahapur_villa.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
                     <img src="assets/industries_internal/architecture/individual_houses/5_house_in_parbhani.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/6_vegurla_house.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/7_house_in_baroda.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/8_house_in_dhule.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/architecture/individual_houses/9_house_in_kankavli.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -244,18 +304,7 @@
                 </div>
             </div>
         </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/architecture/others/5_aai.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
+        
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
