--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -146,7 +146,7 @@
             </div>
         </div>
         <!-- project card -->
-        <div class="project_card">
+        <!-- <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
                     <img src="assets/industries_internal/hospitality_healthcare/healthcare/3_kudus.jpeg" class="project_image" alt="">
@@ -156,7 +156,7 @@
                     <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
