--- a/index.html
+++ b/index.html
@@ -333,24 +333,29 @@
 
                     <div class="key_project_right">
                         <p class="key_project_name">Coastal Villa</p>
-                        <p class="key_project_time">Alibaug</p>
-                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, quasi.</p>
+                        <p class="key_project_time">Alibaug, Completed</p>
+                        <p class="key_project_desc">With meticulous attention to detail, this villa strikes a balance between tradition and innovation. Expressive design helps respond to nature and also a sense of contemporary elegance.</p>
 
                         <div class="key_points v2_key_points">
                             <!-- key_point -->
                             <div class="key_point">
                                 <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem, ipsum.</p>
+                                <p class="key_point_desc">contextual design</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
                                 <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem, ipsum.</p>
+                                <p class="key_point_desc">geometric layouts</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
                                 <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem, ipsum.</p>
+                                <p class="key_point_desc">modern</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
+                                <p class="key_point_desc">expressive</p>
                             </div>
                             
                         </div>
@@ -368,48 +373,21 @@
     <!-- clients -->
     <section class="clients">
         <div class="container">
-            <p class="client_head">they trust our work, so can you!</p>
+            <!-- <p class="client_head">they trust our work, so can you!</p> -->
             <div class="clients_wrap">
                 <!-- client -->
-                <div class="client">
+                <!-- <div class="client">
                     <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
+                </div> -->
                 <!-- client -->
-                <div class="client">
+                <!-- <div class="client">
                     <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
+                </div> -->
                 <!-- client -->
-                <div class="client">
+                <!-- <div class="client">
                     <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
-                <!-- client -->
-                <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div>
+                </div> -->
+                
             </div>
         </div>
     </section>
