--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -182,6 +182,6 @@
     </div>
 
     <!-- ********************************************************* -->
-    <script src="category.js"></script>
+    <script src="js/category.js"></script>
 </body>
 </html>
