--- a/architecture.html
+++ b/architecture.html
@@ -422,6 +422,6 @@
     </div>
 
     <!-- ********************************************************* -->
-    <script src="category.js"></script>
+    <script src="js/category.js"></script>
 </body>
 </html>
