--- a/interiors.html
+++ b/interiors.html
@@ -255,6 +255,6 @@
     </div>
 
     <!-- ********************************************************* -->
-    <script src="category.js"></script>
+    <script src="js/category.js"></script>
 </body>
 </html>
