--- a/landscape.html
+++ b/landscape.html
@@ -254,6 +254,6 @@
     </div>
 
     <!-- ********************************************************* -->
-    <script src="category.js"></script>
+    <script src="js/category.js"></script>
 </body>
 </html>
