--- a/landscape.html
+++ b/landscape.html
@@ -241,14 +241,67 @@
             </div>
         </div>
     </div>
-
-    <!-- ********************************************************* -->
-    <!-- call cta popup -->
-    <div class="call_cta_popup">
-        <div class="call_cta_container">
-            <p class="call_cta_text">Ruko zara, website toh banne do.</p>
+    <!-- footer -->
+    <footer>
+        <div class="container footer_container">
+            <div class="footer_top">
+                <!-- logo, info -->
+                <div class="footer_logo_info">
+                    <!-- logo -->
+                    <a href="index.html" class="footer_logo_wrap">
+                        <p class="footer_logo">EN+AD</p>
+                        <p class="footer_logo_full">Environment, Architecture & Designs</p>
+                    </a>
+                    <p class="footer_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim non nesciunt repudiandae delectus libero dicta distinctio iusto quas? Rerum, eius.</p>
+                </div>
+                <!-- footer links -->
+                <div class="footer_links_head_wrap">
+                    <p class="footer_links_head">main</p>
+                    <div class="footer_links">
+                        <a class="footer_link">home</a>
+                        <a class="footer_link">about</a>
+                        <a class="footer_link">key projects</a>
+                    </div>
+                </div>
+                <!-- footer links -->
+                <div class="footer_links_head_wrap">
+                    <p class="footer_links_head">industries</p>
+                    <div class="footer_links">
+                        <a class="footer_link">architecture</a>
+                        <a class="footer_link">landscape</a>
+                        <a class="footer_link">interiors</a>
+                        <a class="footer_link">hospitality & healthcare</a>
+                    </div>
+                </div>
+                <!-- footer contact -->
+                <div class="footer_contact">
+                    <p class="footer_links_head">contact</p>
+                    <div class="icon_contact">
+                        <p class="material-symbols-outlined">apartment</p>
+                        <a href="https://maps.app.goo.gl/gX93NnLEbZvh36Wt8" target="_blank" class="footer_contact_detail footer_address">
+                            66 - Rajendra Nagar Scheme, Opposite Honda Solitaire, Dattapada Road, Borivali (E), Mumbai - 400066
+                        </a>
+                    </div>
+                    <div class="icon_contact">
+                        <p class="material-symbols-outlined">ring_volume</p>
+                        <a href="tel:+91-8369022430" class="footer_contact_detail">+91-8369022430</a>
+                    </div>
+                    <div class="icon_contact">
+                        <p class="material-symbols-outlined">mark_email_unread</p>
+                        <a href="mailto:info.enarchitecture@gmail.com" class="footer_contact_detail">info.enarchitecture@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_bottom">
+                <!-- copyright social -->
+                <div class="copyright_social">
+                    <p class="company_details">&copy; EN Architecture & Designs
+                        <script>document.write(new Date().getFullYear())</script>
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
+    </footer>
 
     <!-- ********************************************************* -->
     <script src="js/category.js"></script>
