about page, industries navigation

--- a/architecture.html
+++ b/architecture.html
@@ -34,7 +34,7 @@
                 <a href="index.html" class="nav_links">Home</a>
                 <a href="index.html#keyProjects" class="nav_links">Key Projects</a>
                 <a href="index.html#industries" class="nav_links nav_industries">Industries</a>
-                <a class="nav_links">About</a>
+                <a href="about.html" class="nav_links">About</a>
             </div>
             
         </div>
@@ -408,6 +408,10 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- industry navigation -->
+    <div class="industry_navigation">
+        <a href="landscape.html" class="industry_nav_btn">Check out: <span class="industry_nav_name">landscape</span></a>
     </div>
     <!-- footer -->
     <footer>
