--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="index.html" class="nav_links">Home</a>
                 <a class="nav_links nav_key_projects">Key Projects</a>
                 <a class="nav_links nav_industries">Industries</a>
-                <a class="nav_links">About</a>
+                <a href="about.html" class="nav_links">About</a>
             </div>
         </div>
     </header>
