--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -34,7 +34,7 @@
                 <a href="index.html" class="nav_links">Home</a>
                 <a href="index.html#keyProjects" class="nav_links">Key Projects</a>
                 <a href="index.html#industries" class="nav_links nav_industries">Industries</a>
-                <a class="nav_links">About</a>
+                <a href="about.html" class="nav_links">About</a>
             </div>
             
         </div>
@@ -167,6 +167,11 @@
             </div>
         </div>
         
+    </div>
+    <!-- industry navigation -->
+    <div class="industry_navigation">
+        <a href="interiors.html" class="industry_nav_btn">In case you missed: <span class="industry_nav_name">interiors</span></a>
+        <a href="index.html" class="industry_nav_btn"><span class="industry_nav_name">go home</span></a>
     </div>
     <!-- footer -->
     <footer>
